--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5"
   },
