--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^16.5.2",
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "merge": ">1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
