--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
-    "merge": ">1.2.1"
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
