--- a/package.json
+++ b/package.json
@@ -1,37 +1,19 @@
 {
-  "name": "viveksite",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.4",
-    "@fortawesome/free-brands-svg-icons": "^5.6.1",
-    "@fortawesome/pro-regular-svg-icons": "^5.3.1",
-    "@fortawesome/pro-solid-svg-icons": "^5.3.1",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "^4.3.1",
-    "js-yaml": "^3.13.1",
-    "merge": ">=1.2.1",
-    "react": "^16.5.2",
-    "react-anchor-link-smooth-scroll": "^1.0.11",
-    "react-dom": "^16.5.2",
-    "react-scripts": "^3.0.1"
-  },
+  "name": "vite-project",
+  "version": "0.0.0",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "include-media": "^1.4.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^1.1.4",
+    "sass": "^1.47.0",
+    "vite": "^2.7.10"
   }
 }
